--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,6 +1,6 @@
 <h1>Create a Team and Heroes!</h1>
 
-<form action="/team" method="post">
+<form action="/teams" method="post">
   <label>Team Name</label>
   <input type="text" name="team[name]"></br>
   <label>Team Motto</label>
