automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -2,4 +2,7 @@
 
 <h2>Motto:<%= @team_motto%></h2>
 
-<%@hero_name.each do |name|%>
+<%@team_members.each do |hero|%>
+<h2>Hero Name: <%=@hero_name[index]%></h2>
+<h2>hero[:power]</h2>
+<h2>hero[:bio]</h2>
