--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -2,7 +2,7 @@
 
 <h2>Motto:<%= @team_motto%></h2>
 
-<%@team_members.each do |hero|%>
+<%@team_members.each_with_index do |hero, index|%>
 <h2>Hero Name: <%=@hero_name[index]%></h2>
-<h2>hero[:power]</h2>
-<h2>hero[:bio]</h2>
+<h2>Hero Power: <%=@hero[:power]%></h2>
+<h2>Hero Bio: <%=@hero[:bio]%></h2>
