--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -4,5 +4,5 @@
 
 <%@team_members.each_with_index do |hero, index|%>
 <h2>Hero Name: <%=@hero_name[index]%></h2>
-<h2>Hero Power: <%=@hero[:power]%></h2>
-<h2>Hero Bio: <%=@hero[:bio]%></h2>
+<h2>Hero Power: <%=@hero_power[index]]%></h2>
+<h2>Hero Bio: <%=@hero_bio[index]%></h2>
