--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -6,3 +6,4 @@
 <h2>Hero Name: <%=@hero_name[index]%></h2>
 <h2>Hero Power: <%=@hero_power[index]]%></h2>
 <h2>Hero Bio: <%=@hero_bio[index]%></h2>
+<%end%>
