--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,4 +1,4 @@
-<h1><%=@team_name%></h1>
+<!-- <h1><%=@team_name%></h1>
 
 <h2>Motto:<%= @team_motto%></h2>
 
@@ -6,4 +6,16 @@
 <h2>Hero Name: <%=@hero_name[index]%></h2>
 <h2>Hero Power: <%=@hero_power[index]%></h2>
 <h2>Hero Bio: <%=@hero_bio[index]%></h2>
-<%end%>
+<%end%> -->
+
+<h1><%= @team_name %></h1>
+<h2>Team Motto: <%= @team_motto %></h2>
+
+<% @team_members.each.with_index do |hero, index| %>
+  <h2>Hero Name: <%= @hero_name[index] %></h2>
+  <p>
+    Hero power: <%= @hero_power[index] %>
+    <br>
+    Hero biography: <%= @hero_bio[index] %>
+  </p>
+<% end %>
