--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,6 +1,6 @@
 <h1><%=@team_name%></h1>
 
-<h2>Motto:<%= @team_motto%></h2>
+<h2>Team Motto: <%=@team_motto%></h2>
 
 <%@team_members.each.with_index do |hero, index|%>
 <h2>Hero Name: <%=@hero_name[index]%></h2></br>
