--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -5,5 +5,5 @@
 <%@team_members.each.with_index do |hero, index|%>
 <h2>Hero Name: <%=@hero_name[index]%></h2></br>
 <h2>Hero Power: <%=@hero_power[index]%></h2></br>
-<h2>Hero Bio: <%=@hero_bio[index]%></h2></br>
+<h2>Hero Biography: <%=@hero_bio[index]%></h2></br>
 <%end%>
