--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,9 @@
+<h1><%=@team_name%></h1>
 
+<h2>Team Motto: <%=@team_motto%></h2>
 
-
+<%@team_members.each.with_index do |hero, index|%>
+<h2>Hero Name: <%=@hero_name[index]%></h2></br>
+<h2>Hero Power: <%=@hero_power[index]%></h2></br>
+<h2>Hero Biography: <%=@hero_bio[index]%></h2></br>
+<%end%>
